--- a/signup.html
+++ b/signup.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Pollsteraunt Signup</title>
+        <link href="signup.css" rel="stylesheet" type="text/css" />
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-  <script src="singup.js"></script>
+  <script src="signup.js"></script>
     </head>
     <body>
         <form class="signup-form">
