added files for login page. did basic html for form

--- a/login.html
+++ b/login.html
@@ -3,21 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Pollsteraunt Signup</title>
-        <link href="signup.css" rel="stylesheet" type="text/css" />
+        <title>Pollsteraunt Login</title>
+        <link href="login.css" rel="stylesheet" type="text/css" />
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-  <script src="signup.js"></script>
+  <script src="login.js"></script>
     </head>
     <body>
-        <form class="signup-form">
+        <form class="login-form">
             <fieldset>
                 Username: <input type="text" name="username" class="username" required><br>
                 Password: <input type="password" name="password" class="password" required><br>
-                <button name="button">Sign Up</button>
+                <button name="button">Login</button>
         </form>
-     
+     <p>Need to create an account? Click here</p>
     </body>
 </html>
